# ReFactor

./: .gitignore  README.md  docker-compose.yml
aqi-estimator.libraries/ImageProcessingPipeline/: CMakeLists.txt  ImageProcessingPipeline  README.md
aqi-estimator.libraries/ImageProcessingPipeline/includes/dcp/: hazeremoval.h
aqi-estimator.libraries/ImageProcessingPipeline/output/mock/: mock_processed_features.csv
aqi-estimator.libraries/ImageProcessingPipeline/src/: main.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/Java/: ImagePipelineClass.java
aqi-estimator.libraries/ImageProcessingPipeline/src/Pipeline/: imagepipeline.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/Pipeline/DCP/: guidedfilter.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/dcp/: guidedfilter.cpp  hazeremoval.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/pipeline/: program.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/unix/: main.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/unix/dcp/: guidedfilter.cpp  hazeremoval.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/unix/native/: Java_ImagePipeline_ExtractEnhachedMetadata.cpp
aqi-estimator.libraries/ImageProcessingPipeline/src/unix/pipeline/: imagepipeline.cpp  (+1 more)
aqi-estimator.libraries/ImageProcessingPipeline/src/windows/: ImageProcessingPipeline.sln
aqi-estimator.libraries/ImageProcessingPipeline/windows/ImageProcessingPipeline/: ImageProcessingPipeline.vcxproj  ImageProcessingPipeline.vcxproj.filters  guidedfilter.cpp  hazeremoval.cpp  imagepipeline.cpp  pch.h
(+241 files in other folders)
